# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.11
#

2005-10-18 11:05:18 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-19

    Summary:
      web, encode cookies on response serialization (use itools.schemas)
    Revision:
      itools--main--0.11--patch-19


    modified files:
     Changelog web/response.py


2005-10-18 11:03:40 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-18

    Summary:
      schemas, add "get_datatype_by_prefix" to the API
    Revision:
      itools--main--0.11--patch-18


    modified files:
     Changelog schemas/registry.py


2005-10-18 10:18:43 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-17

    Summary:
      doc, update stl usage in the tasktracker examples
    Revision:
      itools--main--0.11--patch-17


    modified files:
     Changelog doc/examples/task_tracker1/TaskTracker.py
     doc/examples/task_tracker2/TaskTracker.py doc/stl.tex


2005-10-17 17:18:47 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-16

    Summary:
      web, fix "request.path" (always the real path, never the "virtual")
    Revision:
      itools--main--0.11--patch-16


    modified files:
     Changelog web/zope2.py


2005-10-17 10:23:58 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-15

    Summary:
      handlers, remove link to "stl"
    Revision:
      itools--main--0.11--patch-15


    modified files:
     Changelog handlers/Folder.py


2005-10-15 18:41:50 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-14

    Summary:
      use "HTTP_X_FORWARDED_HOST" (no more "REAL_HOST")
    Revision:
      itools--main--0.11--patch-14


    modified files:
     Changelog web/zope2.py


2005-10-13 14:57:15 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-13

    Summary:
      xhtml, cosmetic change in "get_skeleton"
    Revision:
      itools--main--0.11--patch-13


    modified files:
     Changelog xhtml/XHTML.py

